# fastapi-generator

./: README.md  requirements.txt
.github/workflows/: template-generation.yaml
app/: cookiecutter.json
app/hooks/: post_gen_project.py
app/{{cookiecutter.project_slug}}/: .env  .env.dev  .env.prod  .env.staging  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  deploy.sh  docker-compose.yml  format.sh  main.tf  pyproject.toml  setup.cfg
app/{{cookiecutter.project_slug}}/.cloudbuild/: cloudbuild.yaml
app/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
app/{{cookiecutter.project_slug}}/.github/workflows/: lint.yaml
app/{{cookiecutter.project_slug}}/app/: main.py  middleware.py
app/{{cookiecutter.project_slug}}/app/api/: deps.py  router.py
app/{{cookiecutter.project_slug}}/app/core/: cloud_logging.py  config.py  google_clients.py
app/{{cookiecutter.project_slug}}/app/core/google_apis/: drive.py  people.py
app/{{cookiecutter.project_slug}}/app/core/google_apis/auth/: credentials.py
app/{{cookiecutter.project_slug}}/app/firestore/crud/: __init__.py  firestore.py
app/{{cookiecutter.project_slug}}/app/firestore/endpoints/: firestore_user.py
app/{{cookiecutter.project_slug}}/app/firestore/models/: base.py  user.py
app/{{cookiecutter.project_slug}}/app/models/: base.py
app/{{cookiecutter.project_slug}}/app/sqlmodel/: __init__.py  db.py
app/{{cookiecutter.project_slug}}/app/sqlmodel/api/: deps.py
app/{{cookiecutter.project_slug}}/app/sqlmodel/api/endpoints/: todo.py  user.py
app/{{cookiecutter.project_slug}}/app/sqlmodel/crud/: base.py  todo.py  user.py
app/{{cookiecutter.project_slug}}/app/sqlmodel/models/: base.py  todo.py  user.py  userTodo.py
app/{{cookiecutter.project_slug}}/app/utils/: date.py
app/{{cookiecutter.project_slug}}/hooks_modules/: branch_protection.json  main.py  utils.py
app/{{cookiecutter.project_slug}}/iac/: main.tf  provider.tf  variables.tf
app/{{cookiecutter.project_slug}}/iac/env/dev/: backend.conf
app/{{cookiecutter.project_slug}}/iac/env/prod/: backend.conf
app/{{cookiecutter.project_slug}}/iac/env/staging/: backend.conf
app/{{cookiecutter.project_slug}}/migrations/: env.py
app/{{cookiecutter.project_slug}}/migrations/versions/: 1eb8ef4fc04e_user_with_todo.py
app/{{cookiecutter.project_slug}}/tests/: conftest.py
app/{{cookiecutter.project_slug}}/tests/api/: test_query_filter.py  test_todo.py  test_user.py
app/{{cookiecutter.project_slug}}/tests/utils/: query_filter.py  todo.py  user.py
